<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">


        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginEnd="@dimen/margin16"
            android:layout_marginTop="@dimen/margin16"
            android:background="@drawable/border_all_grey">

            <TextView
                android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/num"
                android:textColor="@color/black"
                android:textSize="@dimen/size16"
                android:background="@drawable/border_right"
                />

            <LinearLayout
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/margin6"
                android:background="@drawable/border_right">

                <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/nom"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size16"
                    />

                <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/prenomCoureur"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size16"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/echelonCoureur"
                android:textColor="@color/black"
                android:textSize="@dimen/size16"
                android:padding="@dimen/margin6"
                android:gravity="center"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_left_grey"/>
        </LinearLayout>





        <ListView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:id="@+id/listCrr"
            android:layout_marginBottom="@dimen/margin16"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginEnd="@dimen/margin16"
            android:background="@drawable/border_all_grey_notop"
            />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/navigation_item" />
</android.support.v4.widget.DrawerLayout>