<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white_grey">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin16"
            android:background="@drawable/border_all_grey"
            android:layout_marginTop="@dimen/margin6" android:layout_marginStart="@dimen/margin30" android:layout_marginEnd="@dimen/margin30">

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin6"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chooseTypeTour"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size16"
                    android:padding="@dimen/margin3"
                    android:gravity="center" android:layout_gravity="center"/>

                <Spinner android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:id="@+id/spinnerTourTeam"
                    android:layout_margin="@dimen/margin6"
                    android:layout_gravity="center" android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin30"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent" android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:background="@drawable/border_all_black_nobottom"
                    android:id="@+id/mtitle">

                    <TextView
                        android:layout_width="0dp" android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/num"
                        android:textColor="@color/black"
                        android:textSize="@dimen/size16"
                        android:background="@drawable/border_right"
                        android:padding="@dimen/margin6"
                        />

                    <TextView
                        android:layout_width="0dp" android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:text="@string/time"
                        android:textColor="@color/black"
                        android:textSize="@dimen/size16"
                        android:background="@drawable/border_right"
                        android:padding="@dimen/margin6"
                        />

                    <TextView
                        android:layout_width="0dp" android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:text="@string/nomEquipe"
                        android:textColor="@color/black"
                        android:textSize="@dimen/size16"
                        android:padding="@dimen/margin6"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent" android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:background="@drawable/border_all_black_nobottom"
                    android:id="@+id/title">

                    <TextView
                        android:layout_width="0dp" android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/num"
                        android:textColor="@color/black"
                        android:textSize="@dimen/size16"
                        android:background="@drawable/border_right"
                        android:padding="@dimen/margin6"
                        />

                    <LinearLayout
                        android:layout_width="0dp" android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:background="@drawable/border_bottom">

                            <TextView
                                android:layout_width="0dp" android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/time"
                                android:textColor="@color/black"
                                android:textSize="@dimen/size16"
                                android:background="@drawable/border_right"
                                android:padding="@dimen/margin6"
                                />

                            <TextView
                                android:layout_width="0dp" android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/date"
                                android:textColor="@color/black"
                                android:textSize="@dimen/size16"
                                android:padding="@dimen/margin6"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp" android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/nom"
                                android:textColor="@color/black"
                                android:textSize="@dimen/size16"
                                android:padding="@dimen/margin6"
                                android:background="@drawable/border_right"
                                />

                            <TextView
                                android:layout_width="0dp" android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/nomEquipe"
                                android:textColor="@color/black"
                                android:textSize="@dimen/size16"
                                android:padding="@dimen/margin6"
                                />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>

            <ListView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:id="@+id/listRankTeam"
                android:background="@drawable/border_all_black"
                android:divider="@color/grey_black"
                android:headerDividersEnabled="true"
                android:footerDividersEnabled="true"
                android:dividerHeight="@dimen/height1"
                />

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/navigation_item" />
</android.support.v4.widget.DrawerLayout>